# immich-tz-fixer

./: .gitignore  README.md  pyproject.toml
immich_client/: __init__.py  client.py
immich_client/api/activities/: create_activity.py  delete_activity.py
immich_client/api/albums/: add_assets_to_album.py  add_users_to_album.py  create_album.py  delete_album.py  get_album_info.py  get_all_albums.py  remove_asset_from_album.py  remove_user_from_album.py  update_album_info.py  update_album_user.py
immich_client/api/api_keys/: delete_api_key.py  get_api_key.py  get_my_api_key.py  update_api_key.py
immich_client/api/assets/: check_bulk_upload.py  copy_asset.py  delete_asset_metadata.py  delete_assets.py  download_asset.py  get_all_user_assets_by_device_id.py  get_asset_info.py  (+13 more)
immich_client/models/: __init__.py  album_response_dto.py  asset_bulk_upload_check_result.py  asset_media_create_dto.py  asset_media_replace_dto.py  asset_metadata_response_dto.py  asset_metadata_upsert_item_dto.py  asset_response_dto.py  permission.py  person_with_faces_response_dto.py  plugin_action_response_dto.py  plugin_filter_response_dto.py  queue_response_dto.py  queue_status_dto.py  queues_response_dto.py  system_config_dto.py  system_config_image_dto.py  system_config_machine_learning_dto.py  system_config_smtp_dto.py  system_config_templates_dto.py  time_bucket_asset_response_dto.py  validate_library_response_dto.py  workflow_action_item_dto.py  workflow_action_response_dto.py  workflow_filter_item_dto.py  workflow_filter_response_dto.py
immich_tz_fixer/: __init__.py  main.py
(+147 files in other folders)
